syntax = "proto3";

package core;

option go_package = "tenkhours/proto/pb/core";

enum EntityType {
  TaskType = 0;
  HabitType = 1;
}